# arca-bot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cron/: api-crontab  backup-crontab  cleanup-crontab
docs/: CHANGELOG.md  TODOs.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  igcontadores-golden-signals.json  igcontadores-overview.json
monitoring/rules/: igcontadores-alerts.yml
scripts/: docker_clean_install.sh  google_drive_upload_test.py  start.sh  start_debug.sh
src/api/: __init__.py  exceptions.py  main.py
src/api/application/: __init__.py  workflow_application_service.py
src/api/config/: __init__.py  settings.py
src/api/controllers/: __init__.py  health_controller.py  system_controller.py  workflow_controller.py
src/api/middleware/: __init__.py  auth.py  observability.py
src/api/models/: __init__.py
src/api/utils/: __init__.py  error_utils.py  file_utils.py  ttl_calculator.py  validators.py
src/core/: __init__.py  orchestrator.py
src/core/config/: __init__.py  config.py
src/core/events/: __init__.py  workflow_events.py
src/core/exceptions/: __init__.py  base_exceptions.py  infrastructure_exceptions.py  password_exceptions.py
src/core/infrastructure/: __init__.py  redis_client.py
src/core/logging/: __init__.py  setup.py
src/core/utils/: __init__.py  (+2 more)
tests/: test_ccma_vep.py  test_password_service.py  test_payment_method.py  test_retry_service.py  test_runner.py  test_services.py  test_vep_pdf_simple.py  test_workflow_execution.py  test_workflow_steps.py  test_workflows.py
(+58 files in other folders)
